--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 /* Colors
 main backgroudn #f2f0ee
-page backgroudn #F8F8F8
+page background #F8F8F8
+navigation #555555
+h1 background #838383
 
 */
 
@@ -72,7 +74,7 @@ h1 {
   font-weight: normal;
   font-size: 60px;
   padding: 15px;
-  background-color: grey;
+  background-color: #838383;
   border-radius: 40px 0 0 0;
 }
 
@@ -90,6 +92,8 @@ h1 {
   align-items: center;
 }
 .my-photo img {
+  border: 2px solid #555555;
+  padding: 15px;
   max-width: 100%;
   height: 60vh;
 }
