--- a/style.css
+++ b/style.css
@@ -57,21 +57,22 @@ a {
 .links-soc {
   display: flex;
   align-items: center;
-  padding: 5px;
 }
 
-.navigation a:hover {
+.links-web a:hover {
   color: #fff;
   border-bottom: 1px solid;
   padding-bottom: 0;
 }
 .linked-in:hover {
+  background-color: #fff;
+  padding: 15px 5px 0px 5px;
   border-radius: 5px;
-  background-color: white;
 }
 .git-hub:hover {
+  background-color: #fff;
+  padding: 15px 5px 0px 5px;
   border-radius: 5px;
-  background-color: white;
 }
 
 .wrapper-page-1 {
@@ -86,7 +87,7 @@ h1 {
   color: #fff;
   text-transform: uppercase;
   font-weight: normal;
-  font-size: 55px;
+  font-size: 40px;
   padding: 15px;
   background-color: #838383;
   border-radius: 40px 0 0 0;
