--- a/style.css
+++ b/style.css
@@ -110,5 +110,31 @@ h1 {
   border: 2px solid #555555;
   padding: 15px;
   max-width: 100%;
-  height: 60vh;
+  height: auto;
+}
+@media all and (max-width: 700px) {
+  .my-photo {
+    display: none;
+  }
+  .navigation {
+    display: block;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    background-color: #555555;
+    border-radius: 5px 5px 0 0;
+    /* background-image: url(resources/my-logo.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: 20px 0; */
+  }
+  .links-web {
+    display: block;
+  }
+  .links-soc {
+    display: block;
+  }
+  .logo img {
+    height: 60px;
+    margin: 0;
+  }
 }
