--- a/style.css
+++ b/style.css
@@ -5,15 +5,20 @@ navigation #555555
 h1 background #838383
 
 */
+:root {
+  --main-background: #f2f0ee;
+  --navigation-color: #555;
+}
 
 body {
-  margin: ;
-  background-color: #f2f0ee;
+  margin: 0;
+  background-color: var(--main-background);
   font-family: "Source Sans Pro", sans-serif;
 }
 .wrapper {
   background-color: #f8f8f8;
   border-radius: 5px;
+  /* mozna uzywac pikseli */
   max-width: 80%;
   margin: 50px auto;
 }
@@ -24,7 +29,7 @@ nav {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  background-color: #555555;
+  background-color: var(--navigation-color);
   border-radius: 5px 5px 0 0;
   /* background-image: url(resources/my-logo.png);
   background-repeat: no-repeat;
@@ -35,6 +40,7 @@ nav {
   height: 60px;
   margin: 20px auto;
 }
+/* display inline-block */
 .navigation li,
 a {
   color: #000;
@@ -114,10 +120,13 @@ h1 {
 }
 @media all and (max-width: 1000px) {
   .wrapper {
+    /* zawsze jakis margines zostawiamy w poziomie */
     max-width: 100%;
   }
   .navigation {
-    display: block;
+    flex-direction: column;
+    align-items: center;
+    /* display: block; */
 
     /* background-image: url(resources/my-logo.png);
     background-repeat: no-repeat;
@@ -125,14 +134,16 @@ h1 {
     background-position: 20px 0; */
   }
   .wrapper-page-1 {
+    /*zmienic na flex column  */
     display: block;
   }
   .about-me {
     padding: 5px 5px;
-    flex: 1 0;
+    /* flex: 1 0; */
   }
 
   .links-web {
+    /*zmienic na flex column  */
     display: block;
 
     margin-left: 0px;
@@ -143,7 +154,8 @@ h1 {
   }
 
   .links-soc {
-    display: flex;
+    /* display: flex; */
+    /* plik mini-reset - domysle padding  */
     padding: 0;
   }
   .logo img {
