--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 /* Colors
 main backgroudn #f2f0ee
 page background #F8F8F8
-navigation #555555
+navigation #555
 h1 background #838383
 
 */
 :root {
   --main-background: #f2f0ee;
   --navigation-color: #555;
+  --page-background: #f8f8f8;
 }
 
 body {
@@ -16,10 +17,11 @@ body {
   font-family: "Source Sans Pro", sans-serif;
 }
 .wrapper {
-  background-color: #f8f8f8;
+  background-color: var(--page-background);
   border-radius: 5px;
   /* mozna uzywac pikseli */
   max-width: 80%;
+  /* max-width: 1200px; */
   margin: 50px auto;
 }
 nav {
@@ -31,12 +33,8 @@ nav {
   justify-content: space-around;
   background-color: var(--navigation-color);
   border-radius: 5px 5px 0 0;
-  /* background-image: url(resources/my-logo.png);
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: 20px 0; */
 }
-.logo img {
+.container-logo img {
   height: 60px;
   margin: 20px auto;
 }
@@ -81,7 +79,7 @@ a {
   border-radius: 5px;
 }
 
-.wrapper-page-1 {
+.page-1 {
   display: flex;
 }
 .about-me {
@@ -118,10 +116,10 @@ h1 {
   max-width: 100%;
   height: auto;
 }
-@media all and (max-width: 1000px) {
+@media screen and (max-width: 1000px) {
   .wrapper {
     /* zawsze jakis margines zostawiamy w poziomie */
-    max-width: 100%;
+    max-width: 95%;
   }
   .navigation {
     flex-direction: column;
@@ -133,9 +131,10 @@ h1 {
     background-size: contain;
     background-position: 20px 0; */
   }
-  .wrapper-page-1 {
+  .page-1 {
     /*zmienic na flex column  */
-    display: block;
+    flex-direction: column;
+    /* display: block; */
   }
   .about-me {
     padding: 5px 5px;
@@ -144,8 +143,8 @@ h1 {
 
   .links-web {
     /*zmienic na flex column  */
+    /* flex-direction: column; */
     display: block;
-
     margin-left: 0px;
     border: 1px solid;
   }
@@ -158,7 +157,7 @@ h1 {
     /* plik mini-reset - domysle padding  */
     padding: 0;
   }
-  .logo img {
+  .container-logo img {
     height: 60px;
     margin: 0;
   }
