--- a/style.css
+++ b/style.css
@@ -9,8 +9,10 @@ h1 background #838383
   --main-background: #f2f0ee;
   --navigation-color: #555;
   --page-background: #f8f8f8;
+  --h1-background: #838383;
   --footer-background: rgba(0, 0, 0, 0.7);
   --main-border-radius: 5px;
+  font-size: 16px;
 }
 
 body {
@@ -45,7 +47,7 @@ nav {
 .navigation li,
 a {
   color: #000;
-  font-size: 25px;
+  font-size: 1.5rem;
   text-transform: uppercase;
   text-decoration: none;
   list-style-type: none;
@@ -97,29 +99,33 @@ a {
   background-color: #101010;
 }
 
-.page-1 {
+.main-page {
   display: flex;
 }
 .about-me {
   padding: 20px 40px;
   flex: 1 0;
 }
-h1 {
-  margin: 10px 0;
+h1.h1-main-page {
   color: #fff;
+}
+
+h1,
+h2 {
+  margin: 10px 0;
   text-transform: uppercase;
   font-weight: normal;
-  font-size: 40px;
+  font-size: 3rem;
   padding: 15px;
   background-color: #838383;
   border-radius: var(--main-border-radius) var(--main-border-radius) 0 0;
 }
 
 .about-me-paragraph {
-  font-size: 20px;
+  font-size: 1.2rem;
 }
 .about-me-paragraph-blockquote {
-  font-size: 25px;
+  font-size: 1.4rem;
 }
 .my-photo {
   flex: 1 0;
@@ -147,6 +153,70 @@ footer {
 .made-by {
   text-transform: uppercase;
   text-align: right;
+}
+
+h2.form-contact {
+  display: inline-block;
+  columns: #000;
+  font-size: 2rem;
+  padding: 15px;
+  /* margin: 20px; */
+  background-color: var(--h1-background);
+  border-radius: var(--main-border-radius);
+}
+
+.form-contact input,
+label,
+textarea {
+  display: block;
+  margin: 5px;
+  font-size: 1.3rem;
+}
+
+.form-contact input,
+textarea {
+  height: 35px;
+  width: 90%;
+  font-size: inherit;
+  font-family: inherit;
+}
+
+.form-contact input:focus {
+  border-left: 5px solid #000;
+}
+.form-contact textarea:focus {
+  border-left: 5px solid #000;
+}
+.form-contact textarea {
+  height: 80px;
+  font-size: inherit;
+  font-family: inherit;
+}
+
+.form-contact-container {
+  margin: 20px;
+  width: 50%;
+}
+.btn-form-send {
+  box-sizing: border-box;
+  border: none;
+  margin: 10px 0;
+  text-transform: uppercase;
+  font-weight: normal;
+  font-size: 1rem;
+  padding: 8px;
+  background-color: var(--h1-background);
+  border-radius: var(--main-border-radius);
+  cursor: pointer;
+  margin-bottom: 30px;
+}
+.btn-form-send:hover {
+  color: #fff;
+  padding: 10px;
+  border-radius: 5px;
+  border-radius: var(--main-border-radius);
+  transition-property: all;
+  transition-duration: 0.2s;
 }
 
 @media screen and (max-width: 1000px) {
