--- a/style.css
+++ b/style.css
@@ -82,7 +82,6 @@ a {
   border-radius: var(--main-border-radius);
   transition-property: all;
   transition-duration: 0.3s;
-  /* transition-timing-function: ease-in; */
 }
 
 .hamburger {
@@ -257,7 +256,7 @@ textarea {
     transition-duration: 0.1s;
   }
 
-  .page-1 {
+  .main-page {
     flex-direction: column;
   }
   .about-me {
