--- a/style.css
+++ b/style.css
@@ -161,6 +161,24 @@ footer {
   text-align: right;
 }
 
+/* ABOUT ME  */
+
+/* PORTFOLIO PAGE  */
+
+.grid-projects {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 5px;
+  justify-items: center;
+}
+
+.project-box {
+  /* object-fit: contain; */
+  width: 200px;
+  height: 200px;
+  background-color: red;
+}
+
 /* CONTACT PAGE  */
 
 .form-contact-container {
@@ -247,8 +265,6 @@ textarea {
   transition-property: all;
   transition-duration: 0.2s;
 }
-
-/* PORTFOLIO PAGE  */
 
 @media screen and (max-width: 1000px) {
   .wrapper {
