--- a/CSS/style.css
+++ b/CSS/style.css
@@ -57,7 +57,7 @@ a {
   padding: 5px;
 }
 .links-soc img {
-  margin-top: 5px 0;
+  margin-top: 5px;
   height: 35px;
 }
 .links-web {
@@ -199,7 +199,6 @@ footer {
 
 h2.form-contact {
   display: inline-block;
-  columns: #000;
   padding: 15px;
   background-color: var(--h1-background);
   border-radius: var(--main-border-radius);
