--- a/CSS/style.css
+++ b/CSS/style.css
@@ -241,6 +241,7 @@ footer {
 .contact-page-flex-container {
   display: flex;
   justify-content: space-evenly;
+  /* margin-bottom: 50px; */
 }
 
 .photo-container {
@@ -279,7 +280,7 @@ textarea {
 .form-contact input:focus {
   width: 70%;
   border-left: 5px solid #000;
-  background: var(--main-background);
+  background: var(--page-background);
   transition-property: background, width;
   transition-duration: 0.4s;
 }
@@ -287,7 +288,7 @@ textarea {
   width: 70%;
   height: 100px;
   border-left: 5px solid #000;
-  background: var(--main-background);
+  background: var(--page-background);
   transition-property: background, width, height;
   transition-duration: 0.6s;
   border-radius: var(--main-border-radius);
@@ -299,25 +300,28 @@ textarea {
 }
 
 .btn-form-send {
+  display: inline-block;
   box-sizing: border-box;
   border: none;
   margin: 10px 0;
   text-transform: uppercase;
   font-weight: normal;
   font-size: 1rem;
-  padding: 8px;
-  width: 80px;
+  padding: 10px;
+  /* width: 80px; */
   background-color: var(--h1-background);
   border-radius: var(--main-border-radius);
   cursor: pointer;
-  margin-bottom: 30px;
 }
 .btn-form-send:hover {
   color: #fff;
-  padding: 10px;
+  /* padding: 25px; */
   border-radius: 5px;
-  width: 100px;
-  font-size: 1.2rem;
+  /* width: 100px; */
+  /* font-size: 1.1rem; */
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   border-radius: var(--main-border-radius);
   transition-property: all;
   transition-duration: 0.2s;
