--- a/CSS/style.css
+++ b/CSS/style.css
@@ -347,7 +347,13 @@ textarea {
   }
   .navigation {
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
+  }
+  .links-web {
+    border: none;
+  }
+  .container-logo {
+    align-self: center;
   }
 
   .hamburger {
@@ -359,12 +365,12 @@ textarea {
     transition-duration: 0.5s;
   }
   .hamburger:hover {
-    background-color: #fff;
-    padding: 10px;
-    border-radius: 5px;
-    border-radius: var(--main-border-radius);
+    /* background-color: #fff;
+    /* padding: 10px;
+    border-radius: 5px; */
+    /* border-radius: var(--main-border-radius);
     transition-property: all;
-    transition-duration: 0.1s;
+    transition-duration: 0.1s; */
   }
   /* MAIN PAGE  */
 
@@ -386,7 +392,7 @@ textarea {
     top: 300px;
     display: block;
     margin-left: 0px;
-    border: 1px solid;
+    border-top: 1px solid;
   }
 
   .links-soc {
@@ -395,10 +401,24 @@ textarea {
   .links-soc.active {
     display: flex;
     padding: 10px;
+    justify-content: center;
   }
 
   .links-web li {
-    border: 1px solid;
+    border-bottom: 1px solid;
+    text-align: center;
+  }
+
+  .links-web a:hover {
+    border-bottom: none;
+  }
+  .links-soc-item:hover {
+    background-color: #fff;
+    padding: 10px 5px 0px 5px;
+    border-radius: 5px;
+    border-radius: var(--main-border-radius);
+    transition-property: all;
+    transition-duration: 0.3s;
   }
 
   .container-logo img {
@@ -420,4 +440,14 @@ textarea {
   .photo-container {
     display: none;
   }
+}
+
+@media screen and (max-width: 1250px) {
+  
+  /* MAIN PAGE  */
+
+  .main-page {
+    flex-direction: column;
+  }
+  
 }
