--- a/CSS/style.css
+++ b/CSS/style.css
@@ -199,6 +199,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   width: 200px;
   height: 200px;
   background-image: linear-gradient(
